--- a/posts/templates/posts/post_busca.html
+++ b/posts/templates/posts/post_busca.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {%load humanize%}
-{%block conteudo%}
-           
+
+{%block titulo%} Busca {%endblock%}
+
+{%block conteudo%}          
 <!-- CONTENT -->
         <div class="card-columns mt-4">
 
