--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="pt">
 
 <head>
+    <title>{%block titulo%}{%endblock%}Blog Luciano</title>
     {% include 'parciais/_head.html' %}
 </head>
 
