--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -35,7 +35,7 @@
                     </p>
 
                     <div class="text-right">
-                        <a href="{ url 'post_detalhes'}post.id" class="btn btn-outline-secondary">Ler mais...</a>
+                        <a href="{% url 'post_detalhes' post.id %}" class="btn btn-outline-secondary">Ler mais...</a>
                     </div>
                 </div>
             </div>
